[package]
name = "cave"
version = "0.1.0"
authors = ["Willem Victor <wvictor@retrorabbit.co.za>"]
edition = "2018"

[dependencies]
nalgebra = "0.17"
num-traits = "0.2"
piston = "0.42.0"
piston2d-graphics = "0.30.0"
pistoncore-glutin_window = "0.54.0"
piston2d-opengl_graphics = "0.59.0"
shred = "0.7.1"
specs = "0.14"
rayon = "1.0"